--- a/.github/workflows/compilation.yml
+++ b/.github/workflows/compilation.yml
@@ -32,6 +32,8 @@ jobs:
           JOBS="$(getconf _NPROCESSORS_ONLN)"
           make -j "$JOBS" ps2_defconfig
           sed -i '/^CONFIG_INITRAMFS_SOURCE=/s#=.*$#="/srv/initramfs"#' .config
+          sed -i '/^modprobe ps2fb mode_option=/s#=.*$#="640x448i@60"#' /srv/initramfs/sbin/init
+          cat /srv/initramfs/sbin/init
           make -j "$JOBS" oldconfig
           make -j "$JOBS" vmlinux
           make -j "$JOBS" modules
@@ -42,7 +44,6 @@ jobs:
           make -j "$JOBS" vmlinuz
           ln vmlinuz vmlinuz-${{ env.ARCHIVE_TAG }}.elf
           tar cvzf usr/initramfs_data.tar.gz -C /srv --exclude initramfs/lib/modules initramfs
-
 
       - name: Publish kernel
         if: ${{ success() }}
