--- a/arch/mips/configs/ps2_defconfig
+++ b/arch/mips/configs/ps2_defconfig
@@ -126,7 +126,7 @@ CONFIG_IPC_NS=y
 # CONFIG_SYSFS_DEPRECATED is not set
 CONFIG_RELAY=y
 CONFIG_BLK_DEV_INITRD=y
-CONFIG_INITRAMFS_SOURCE="../initramfs/ps2"
+CONFIG_INITRAMFS_SOURCE="../initramfs"
 CONFIG_INITRAMFS_ROOT_UID=1000
 CONFIG_INITRAMFS_ROOT_GID=1000
 # CONFIG_RD_GZIP is not set
