--- a/.github/workflows/compilation.yml
+++ b/.github/workflows/compilation.yml
@@ -29,6 +29,7 @@ jobs:
           INSTALL_MOD_PATH: /srv/initramfs
           INSTALL_MOD_STRIP: 1
         run: |
+          echo "dmesg | grep rom" >> $INSTALL_MOD_PATH/sbin/init
           JOBS="$(getconf _NPROCESSORS_ONLN)"
           reconfig() { sed -i "/$1[ =]/"'s#^.*$'"#$1=$2#" .config; }
           unconfig() { sed -i "/^$1=/"'s/^.*$'"/# $1 is not set/" .config; }
