--- a/.github/workflows/compilation.yml
+++ b/.github/workflows/compilation.yml
@@ -31,6 +31,7 @@ jobs:
         run: |
           echo "dmesg | grep rom" >> $INSTALL_MOD_PATH/sbin/init
           echo "cat /proc/cpuinfo | grep machine" >> $INSTALL_MOD_PATH/sbin/init
+          cat $INSTALL_MOD_PATH/sbin/init
           JOBS="$(getconf _NPROCESSORS_ONLN)"
           reconfig() { sed -i "/$1[ =]/"'s#^.*$'"#$1=$2#" .config; }
           unconfig() { sed -i "/^$1=/"'s/^.*$'"/# $1 is not set/" .config; }
